--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li class="animal">lacoste</li>
         <li class="animal">cachorro</li>
         <li>girafa</li>
+        <li>macaco</li>
     </ul>
 </body>
 </html>
